index.html の ! の追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <head>
-      My GitHub Pages Site!
+      My GitHub Pages Site!!!!!
     </head>
   </head>
   <body>
